# fellow-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-16-fellowai-cli.md
docs/superpowers/specs/: 2026-05-16-fellow-cli-design.md
src/fellowai/: SKILL.md  __main__.py  cli.py  client.py  config.py  errors.py  output.py  time_parse.py
src/fellowai/commands/: __init__.py  action_items.py  auth.py  notes.py  recordings.py
tests/: test_client.py  test_config.py  test_config_perms.py  test_output.py  test_smoke.py  test_time_parse.py
tests/test_commands/: test_action_items.py  test_auth.py  test_debug.py  test_install_skill.py  test_notes.py  test_recordings.py
