[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fellowai"
version = "0.1.0"
description = "Unofficial CLI for Fellow.ai's developer API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kramer Sharp", email = "kramer@reurbano.mx" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "questionary>=2.0",
    "platformdirs>=4.2",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "respx>=0.20",
    "vcrpy>=6.0",
    "ruff>=0.4",
]

[project.scripts]
fellowai = "fellowai.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fellowai"]

[tool.ruff]
line-length = 100
target-version = "py310"
